# intersecciones_entre_dos_poligonos_simples

./: CMakeLists.txt  README.md  baseConf.cmake
lib/pujCGAL/: IO.h  IO.hxx
src/: simple_polygon_intersect.cxx
